RESOLVED FIXED279769
REGRESSION (283478@main): [ Sonoma arm64 wk2 Release ] 4x http/tests/webgpu/webgpu/* tests are flaky failing.
https://bugs.webkit.org/show_bug.cgi?id=279769
Summary REGRESSION (283478@main): [ Sonoma arm64 wk2 Release ] 4x http/tests/webgpu/w...
Anfernee Viduya
Reported 2024-09-16 10:59:11 PDT
http/tests/webgpu/webgpu/api/validation/queue/destroyed/buffer.html http/tests/webgpu/webgpu/api/validation/queue/destroyed/query_set.html http/tests/webgpu/webgpu/api/validation/queue/submit.html http/tests/webgpu/webgpu/shader/execution/flow_control/switch.html are flaky failing. DIFF: Diff logs are long, for readability will attach links instead. LINK: https://build.webkit.org/results/Apple-Sonoma-Release-AppleSilicon-WK2-Tests/283686@main%20(5600)/http/tests/webgpu/webgpu/api/validation/queue/destroyed/buffer-diff.txt https://build.webkit.org/results/Apple-Sonoma-Release-AppleSilicon-WK2-Tests/283686@main%20(5600)/http/tests/webgpu/webgpu/api/validation/queue/destroyed/query_set-diff.txt https://build.webkit.org/results/Apple-Sonoma-Release-AppleSilicon-WK2-Tests/283686@main%20(5600)/http/tests/webgpu/webgpu/api/validation/queue/submit-diff.txt https://build.webkit.org/results/Apple-Sonoma-Release-AppleSilicon-WK2-Tests/283686@main%20(5600)/http/tests/webgpu/webgpu/shader/execution/flow_control/switch-diff.txt REPRODUCIBILITY: I was able to bisect the regression using command $ run-webkit-tests 283478@main --test-list test_list.txt --iterations=100 --child-process=1 REGRESSION: In 283478@main changes were made in WebGPU.
Attachments
test list (121 bytes, text/plain)
2024-09-16 11:01 PDT, Anfernee Viduya
no flags
Radar WebKit Bug Importer
Comment 1 2024-09-16 10:59:21 PDT
Anfernee Viduya
Comment 2 2024-09-16 11:01:27 PDT
Created attachment 472576 [details] test list
EWS
Comment 4 2024-09-16 11:38:25 PDT
Test gardening commit 283712@main (f414703c338f): <https://commits.webkit.org/283712@main> Reviewed commits have been landed. Closing PR #33708 and removing active labels.
Mike Wyrzykowski
Comment 5 2024-09-16 15:29:50 PDT
EWS
Comment 6 2024-09-16 22:13:40 PDT
Committed 283746@main (93be927de1ed): <https://commits.webkit.org/283746@main> Reviewed commits have been landed. Closing PR #33722 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.