REGRESSION (283478@main): [ Sonoma arm64 wk2 Release ] 4x http/tests/webgpu/webgpu/* tests are flaky failing https://bugs.webkit.org/show_bug.cgi?id=279769 rdar://136087702

Reviewed by Cameron McCormack.

283478@main introduced a retain cycle between Device and XRSubImage.

Break the retain cycle similarly to what we do for Queue: use a WeakPtr
in the non-Device class.

* Source/WebGPU/WebGPU/XRSubImage.h:
* Source/WebGPU/WebGPU/XRSubImage.mm:
(WebGPU::XRSubImage::XRSubImage):
(WebGPU::XRSubImage::update):
Break retain cycle

* LayoutTests/platform/mac-wk2/TestExpectations
Undo skipped expectations.

Canonical link: https://commits.webkit.org/283746@main